fix initial section spacings

--- a/_sass/components/_c.images.scss
+++ b/_sass/components/_c.images.scss
@@ -3,6 +3,6 @@
 	right: 60px;
 	top: 30px;
 	width: 200px;
-	display: none;
+	z-index: 200;
 }
 
