--- a/_sass/objects/_o.section.scss
+++ b/_sass/objects/_o.section.scss
@@ -34,7 +34,7 @@
   margin:  0px auto;
   width: 100%;
   height: 300px;
-  padding: 64px;
+  padding: 84px 0px 0px;
 }
 
 .o-end{
